--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/common.css"/>
     <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
@@ -85,14 +86,78 @@
                         abcd  adaskncas asdakjd awekdnx adcajwlsx asdxkjd awekdnx adcajwl
                         abcd  adaskncas asdakjd awekdnx adcajwlsx asdxksx asdx
                         abcd  adaskncas asdakjd awekdnx adcajwlsx asdxkk
-                        ljas aldjxsa askd adslja</p>
+                         sad qwfq cffa sdsfljas aldjxsa askd adslja</p>
+                    <button>Contact</button>
                 </div>
             </div>
         </div>
     </div>
-
-
-
+    <div id="skills">
+        <div class="container">
+            <div class="row">
+               <div class="col-xs-12 col-sm-6 col-md-3 ">
+                    <div class="skills-content text-center">
+                        <i class="fa fa-cog"></i>
+                        <h2 class="text-center">1</h2>
+                    </div>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-3 ">
+                   <div class="skills-content text-center">
+                       <i class="fa fa-cog"></i>
+                       <h2 class="text-center">2</h2>
+                   </div>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-3 ">
+                   <div class="skills-content text-center">
+                       <i class="fa fa-cog"></i>
+                       <h2 class="text-center">3</h2>
+                   </div>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-3 ">
+                   <div class="skills-content text-center">
+                       <i class="fa fa-cog"></i>
+                       <h2 class="text-center">4</h2>
+                   </div>
+               </div>
+           </div>
+        </div>
+    </div>
+    <div id="my-skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="text-center">My Skills</h1>
+                    <div class="line">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <p>Html5</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Css3</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Javascript</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Wordpress</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Jquery</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Requirejs,Seajs</p>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <p>Bootstrap</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="skills-bg"></div>
     <script src="js/jquery-1.11.2.js"></script>
     <script src="js/StarSky.js"></script>
 </body>
