--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="container">
             <div id="brand">L&nbsp;X</div>
             <ul id="nav-bar">
-                <li class="active">Home</li>
-                <li>About</li>
-                <li>Work</li>
-                <li>Service</li>
-                <li>Blog</li>
-                <li>Contact</li>
+                <li class="active">主页</li>
+                <li>简介</li>
+                <li>作品</li>
+                <li>项目</li>
+                <li>博客</li>
+                <li>联系我</li>
             </ul>
             <div id="menu">
                 <span></span>
@@ -33,44 +33,48 @@
     <div id="banner">
         <canvas id='canvas'></canvas>
         <div id="content">
-            <p class="text-center">LiXue</p>
-            <button class="selected">Hire me</button>
-            <button>Contact</button>
+            <p class="text-center">
+                LiXue
+                <br/>
+                前端工程师
+            </p>
+            <button class="selected">联系我</button>
+            <button>下载简历</button>
         </div>
     </div>
     <div id="about">
         <div class="container">
             <div class="row">
-                <h1 class="text-center">What I Do</h1>
+                <h1 class="text-center">我能做什么？</h1>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="aimg1">
-
-                    </div>
                     <div class="aimg2">
                         <i class="fa fa-html5"></i>
-                        Html
+                        前端开发
+                    </div>
+                    <div class="aimg1">
+                        <p>缺少前端工程师?
+                            本人精通原生Js可进行组件开发，也擅长使用各种前端框架进行工程性开发。</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="aimg1">
-
-                    </div>
                     <div class="aimg2">
-                        <i class="fa fa-css3"></i>
-                        Css
+                        <i class="fa fa-pencil"></i>
+                        UI
+                    </div>
+                    <div class="aimg1">
+                        <p>人手不够？
+                            我可以顶上。但坦白讲，我觉得自己的配色没有专业的人那么好。</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="aimg1">
-
-                    </div>
                     <div class="aimg2">
-                        <div class="js-icon">
-                            <img src="img/js.png" alt=""/>
-                        </div>
-                        Javascript
+                        <i class="fa fa-desktop"></i>
+                        产品设计
+                    </div>
+                    <div class="aimg1">
+                        <p>有大致的方向没有具体思路？让我来好了，我喜欢通过各种资源的整合运用，创造出有生命力的新产品。</p>
                     </div>
                 </div>
             </div>
@@ -79,15 +83,16 @@
                     <div class="myself"></div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-8">
-                    <h1 class="text-center">I Am A Designer</h1>
-                    <p class="text-center">abcd  adaskncas asdakjd awekdnx adcajwlsx asdxk
-                        abcd  adaskncas asdakjd awekdnx adcajwlsx asdxk
-                        abcd  adaskncas asdak
-                        abcd  adaskncas asdakjd awekdnx adcajwlsx asdxkjd awekdnx adcajwl
-                        abcd  adaskncas asdakjd awekdnx adcajwlsx asdxksx asdx
-                        abcd  adaskncas asdakjd awekdnx adcajwlsx asdxkk
-                         sad qwfq cffa sdsfljas aldjxsa askd adslja</p>
-                    <button>Contact</button>
+                    <h1 class="text-center">个人资料</h1>
+                    <ul class="self-info">
+                        <li>姓名:李雪</li>
+                        <li>出生日期:1997年阴历10月21日</li>
+                        <li>地址:东北农业大学北区第六公寓</li>
+                        <li>手机号码:15663423507</li>
+                        <li>邮箱:15663423507.163.com</li>
+                        <li>个人博客:xxxxx</li>
+                    </ul>
+                    <button>联系我</button>
                 </div>
             </div>
         </div>
@@ -98,25 +103,25 @@
                <div class="col-xs-12 col-sm-6 col-md-3 ">
                     <div class="skills-content text-center">
                         <i class="fa fa-cog"></i>
-                        <h2 class="text-center">1</h2>
+                        <h3 class="text-center" id="year"></h3>
                     </div>
                </div>
                <div class="col-xs-12 col-sm-6 col-md-3 ">
                    <div class="skills-content text-center">
                        <i class="fa fa-cog"></i>
-                       <h2 class="text-center">2</h2>
+                       <h3 class="text-center" id="month"></h3>
                    </div>
                </div>
                <div class="col-xs-12 col-sm-6 col-md-3 ">
                    <div class="skills-content text-center">
                        <i class="fa fa-cog"></i>
-                       <h2 class="text-center">3</h2>
+                       <h3 class="text-center" id="date"></h3>
                    </div>
                </div>
                <div class="col-xs-12 col-sm-6 col-md-3 ">
                    <div class="skills-content text-center">
                        <i class="fa fa-cog"></i>
-                       <h2 class="text-center">4</h2>
+                       <h3 class="text-center" id="time"></h3>
                    </div>
                </div>
            </div>
@@ -126,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1 class="text-center">My Skills</h1>
+                    <h1 class="text-center">我的技能条</h1>
                     <div class="line">
                         <span></span>
                     </div>
@@ -160,5 +165,6 @@
     <div class="skills-bg"></div>
     <script src="js/jquery-1.11.2.js"></script>
     <script src="js/StarSky.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
