--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/common.css"/>
+    <link rel="stylesheet" href="css/animate.css"/>
+    <link rel="stylesheet" href="css/dialog.css"/>
     <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
@@ -16,29 +18,32 @@
         <div class="container">
             <div id="brand">L&nbsp;X</div>
             <ul id="nav-bar">
-                <li class="active">主页</li>
-                <li>简介</li>
-                <li>作品</li>
-                <li>项目</li>
-                <li>博客</li>
-                <li>联系我</li>
+                <li class="active home">主页</li>
+                <li class="introduce">简介</li>
+                <li class="skill">技能</li>
+                <li class="item">项目</li>
+                <li class="contact">联系我</li>
             </ul>
             <div id="menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
+            <ul class="sub">
+                <li class="text-right home">主页</li>
+                <li class="text-right introduce">简介</li>
+                <li class="text-right skill">技能</li>
+                <li class="text-right item">项目</li>
+                <li class="text-right contact">联系我</li>
+            </ul>
         </div>
     </div>
     <div id="banner">
         <canvas id='canvas'></canvas>
         <div id="content">
-            <p class="text-center">
-                LiXue
-                <br/>
-                前端工程师
-            </p>
-            <button class="selected">联系我</button>
+            <p class="text-center" >LiXue</p>
+            <p class="text-center" >前端工程师</p>
+            <button class="selected contact">联系我</button>
             <button>下载简历</button>
         </div>
     </div>
@@ -48,7 +53,7 @@
                 <h1 class="text-center">我能做什么？</h1>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-4">
                     <div class="aimg2">
                         <i class="fa fa-html5"></i>
                         前端开发
@@ -58,7 +63,7 @@
                             本人精通原生Js可进行组件开发，也擅长使用各种前端框架进行工程性开发。</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-4 ">
                     <div class="aimg2">
                         <i class="fa fa-pencil"></i>
                         UI
@@ -68,7 +73,7 @@
                             我可以顶上。但坦白讲，我觉得自己的配色没有专业的人那么好。</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-4">
                     <div class="aimg2">
                         <i class="fa fa-desktop"></i>
                         产品设计
@@ -89,10 +94,10 @@
                         <li>出生日期:1997年阴历10月21日</li>
                         <li>地址:东北农业大学北区第六公寓</li>
                         <li>手机号码:15663423507</li>
-                        <li>邮箱:15663423507.163.com</li>
+                        <li>邮箱:15663423507@163.com</li>
                         <li>个人博客:xxxxx</li>
                     </ul>
-                    <button>联系我</button>
+                    <button class="contact">联系我</button>
                 </div>
             </div>
         </div>
@@ -139,32 +144,108 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <p>Html5</p>
+                    <p>Html5&nbsp;&nbsp;80%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
+                                aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <span class="sr-only">80%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Css3</p>
+                    <p>Css3&nbsp;&nbsp;80%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
+                             aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <span class="sr-only">80%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Javascript</p>
+                    <p>Javascript&nbsp;&nbsp;70%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30"
+                             aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                            <span class="sr-only">70%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Wordpress</p>
+                    <p>Wordpress&nbsp;&nbsp;80%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
+                             aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <span class="sr-only">80%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Jquery</p>
+                    <p>Jquery&nbsp;&nbsp;60%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40"
+                             aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                            <span class="sr-only">60%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Requirejs,Seajs</p>
+                    <p>Requirejs,Seajs&nbsp;&nbsp;60%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40"
+                             aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                            <span class="sr-only">60%</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <p>Bootstrap</p>
+                    <p>Bootstrap&nbsp;&nbsp;60%</p>
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40"
+                             aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                            <span class="sr-only">60%</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-bg"></div>
+    </div>
+    <div id="project">
+        <h1 class="text-center">目前做过的项目</h1>
+        <div class="line">
+            <span></span>
+        </div>
+        <h2 class="text-center">仿站</h2>
+        <div id="container"></div>
+    </div>
+    <div id="contact-me">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">联系方式</div>
+                <div class="row">
+                    <div class="col-xs-6 text-center">
+                        number:15663423507
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        qq:1281820069
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        weixin:Dog_1997
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        备案号： <a href="http://www.miitbeian.gov.cn/">黑ICP备17007178号</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="skills-bg"></div>
-    <script src="js/jquery-1.11.2.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/holder.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/StarSky.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/require.js" data-main="js/index"></script>
 </body>
 </html>
