--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <link rel="stylesheet" href="css/animate.css"/>
     <link rel="stylesheet" href="css/dialog.css"/>
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="shortcut icon" href=" img/favicon.ico" />
 </head>
 <body>
     <div id="nav">
         <div class="container">
-            <div id="brand">L&nbsp;X</div>
+            <div id="brand">
+                <img src="img/logo.png" alt="" style="width:50px"/>
+            </div>
             <ul id="nav-bar">
                 <li class="active home">主页</li>
                 <li class="introduce">简介</li>
