--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     <span></span>
                 </div>
                 <ul class="sub">
-                    <li class="text-right home">主页</li>
-                    <li class="text-right introduce">简介</li>
-                    <li class="text-right skill">技能</li>
-                    <li class="text-right item">项目</li>
-                    <li class="text-right contact">联系我</li>
+                    <li class="text-right home"><a href="#banner" class="scroll  active ">主页</a></li>
+                    <li class="text-right introduce"><a href="#about"  class="scroll">简介</a></li>
+                    <li class="text-right skill"><a href="#my-skills"  class="scroll">技能</a></li>
+                    <li class="text-right item"><a href="#project"  class="scroll">项目</a></li>
+                    <li class="text-right contact"><a href="#contact-me"  class="scroll">联系我</a></li>
                 </ul>
             </div>
         </div>
