--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
     </script>
 </head>
 <body>
+    <!-- 加载页面 开始 -->
     <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
         <div class="bounce3"></div>
     </div>
+    <!-- 加载页面 结束 -->
+    <!-- 主体 开始 -->
     <div id="ht">
+        <!-- 导航栏 开始 -->
         <div id="nav">
             <div class="container">
                 <div id="brand">
@@ -55,6 +59,8 @@
                 </ul>
             </div>
         </div>
+        <!-- 导航栏 结束 -->
+        <!-- banner 开始 -->
         <div id="banner">
             <canvas id='canvas'></canvas>
             <div id="content">
@@ -65,6 +71,8 @@
                 <button><a href="#"  class="scroll">下载简历</a></button>
             </div>
         </div>
+        <!-- banner 结束 -->
+        <!-- 关于 开始 -->
         <div id="about">
             <div class="container">
                 <div class="row">
@@ -120,6 +128,8 @@
                 </div>
             </div>
         </div>
+        <!-- 关于 结束 -->
+        <!-- 技能介绍 开始 -->
         <div id="skills">
             <div class="container">
                 <div class="row">
@@ -228,6 +238,8 @@
             </div>
             <div class="skills-bg"></div>
         </div>
+        <!-- 技能 结束 -->
+        <!-- 项目展示 开始 -->
         <div id="project">
             <h1 class="text-center">目前做过的项目</h1>
             <div class="line">
@@ -236,6 +248,8 @@
             <h2 class="text-center">1.仿站</h2>
             <div id="container"></div>
         </div>
+        <!-- 项目展示 结束 -->
+        <!-- 联系内容 开始 -->
         <div id="contact-me">
             <div class="container">
                 <div class="row">
@@ -259,7 +273,9 @@
                 </div>
             </div>
         </div>
+        <!-- 联系内容 结束 -->
     </div>
+    <!-- 主体 结束 -->
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/StarSky.js"></script>
